--- a/inventory/group_vars/prom/grafana.yml
+++ b/inventory/group_vars/prom/grafana.yml
@@ -8,7 +8,7 @@ grafana_url: "https://{{ grafana_domain }}/"
 grafana_instance: "localhost"
 grafana_address: "0.0.0.0"
 grafana_port: 3000
-grafana_dashboards_dir: "{{ inventory_dir }}/files/grafana/dashboards"
+grafana_dashboards_dir: "{{ repo_base_dir }}/files/grafana/dashboards"
 
 smtp_host: "{{ smtp_config[hostvars['dresrv'].domain].host }}"
 smtp_pass: "{{ smtp_config[hostvars['dresrv'].domain].pass }}"
