--- a/inventory/host_vars/theia/nginx/vhosts.yml
+++ b/inventory/host_vars/theia/nginx/vhosts.yml
@@ -3,12 +3,12 @@
 nginx_vhosts:
   - filename: default_reject.conf
     server_name: default_reject
-    template: "{{ inventory_dir }}/files/webgw/nginx/default_reject.conf.j2"
+    template: "{{ repo_base_dir }}/files/webgw/nginx/default_reject.conf.j2"
 
   - filename: direct.conf
     server_name: "{{ inventory_hostname }}"
-    template: "{{ inventory_dir }}/files/{{ inventory_hostname }}/nginx/direct.conf.j2"
+    template: "{{ repo_base_dir }}/files/{{ inventory_hostname }}/nginx/direct.conf.j2"
 
   - filename: main.conf
     server_name: www
-    template: "{{ inventory_dir }}/files/{{ inventory_hostname }}/nginx/main.conf.j2"
+    template: "{{ repo_base_dir }}/files/{{ inventory_hostname }}/nginx/main.conf.j2"
