--- a/inventory/host_vars/webgw01/prometheus.yml
+++ b/inventory/host_vars/webgw01/prometheus.yml
@@ -11,5 +11,5 @@ __extra_prometheus_scrape_configs: []
 prometheus_node_static_config: []
 
 prometheus_alert_rules_files:
-  - "{{ inventory_dir }}/files/prometheus/alerts/blackbox.rules"
-  - "{{ inventory_dir }}/files/prometheus/alerts/prometheus.rules"
+  - "{{ repo_base_dir }}/files/prometheus/alerts/blackbox.rules"
+  - "{{ repo_base_dir }}/files/prometheus/alerts/prometheus.rules"
