--- a/playbooks/dresrv.yml
+++ b/playbooks/dresrv.yml
@@ -26,7 +26,7 @@
 
     - name: Install rtmp config
       template:
-        src: "{{ inventory_dir }}/files/{{ inventory_hostname }}/nginx/rtmp.conf.j2"
+        src: "{{ repo_base_dir }}/files/{{ inventory_hostname }}/nginx/rtmp.conf.j2"
         dest: "/etc/nginx/rtmp.conf"
         owner: root
         group: root
