Use relative paths for Theia's borg backups

--- a/inventory/host_vars/romsto/borg.yml
+++ b/inventory/host_vars/romsto/borg.yml
@@ -4,4 +4,4 @@ borg_user: "andrei"
 borg_pool: "/mnt/user/backup/borg"
 
 borg_ssh_check: "{{ borg_user }}@{{ wireguard_ip }}"
-borg_remote_repo: "ssh://{{ borg_ssh_check }}{{ borg_pool }}"
+borg_remote_repo: "ssh://{{ borg_ssh_check }}/."
