Various Arch fixes
- Move kde vars to GUI group
- Fix nerd-fonts package name
- Ability to run setup-kde on gui hosts, not just laptop
- Fix command module crash in efibootmgr role

--- a/inventory/group_vars/gui/arch.yml
+++ b/inventory/group_vars/gui/arch.yml
@@ -103,7 +103,7 @@ base_pacman_packages:
   - tmux
   - ttf-fira-code
   - ttf-font-awesome
-  - ttf-nerd-fonts-symbols
+  - ttf-nerd-fonts-symbols-2048-em
   - usbutils
   - vim
   - vlc
