--- a/inventory/group_vars/swarm/firewall.yml
+++ b/inventory/group_vars/swarm/firewall.yml
@@ -7,3 +7,15 @@ firewalld_zones:
 firewall_rules:
   - port: 2377
     zone: cluster
+  # https://docs.docker.com/engine/swarm/networking/#firewall-considerations
+  - port: 7946
+    protocol: tcp
+    zone: cluster
+
+  - port: 7946
+    protocol: udp
+    zone: cluster
+
+  - port: 4789
+    protocol: udp
+    zone: cluster
