--- a/playbooks/swarm.yml
+++ b/playbooks/swarm.yml
@@ -24,3 +24,39 @@
         opts: "noatime"
         state: mounted
       tags: ["ceph"]
+
+    - name: Setup swarm
+      tags: ["swarm"]
+      block:
+        - name: Check if swarm is active
+          run_once: true
+          ansible.builtin.command:
+            cmd: "{% raw %}docker node ls --format '{{ .Hostname }}'{% endraw %}"
+          check_mode: false
+          changed_when: false
+          failed_when: false
+          register: __swarm_nodes
+
+        - name: Initialize swarm
+          run_once: true
+          ansible.builtin.command:
+            cmd: docker swarm init
+          when:
+            - '"This node is not a swarm manager" in __swarm_nodes.stderr'
+          register: __swarm_init
+
+        - name: Get join token
+          run_once: true
+          ansible.builtin.command:
+            cmd: docker swarm join-token manager -q
+          changed_when: false
+          register: __swarm_token
+          when:
+            - "inventory_hostname not in __swarm_nodes.stdout"
+
+        - name: Join nodes
+          ansible.builtin.command:
+            cmd: "docker swarm join --token {{ __swarm_token.stdout }} {{ hostvars[groups['swarm'][0]].ansible_host }}:2377"
+          when:
+            - inventory_hostname != groups['swarm'][0]
+            - "inventory_hostname not in __swarm_nodes.stdout"
