--- a/inventory/group_vars/all/vars.yml
+++ b/inventory/group_vars/all/vars.yml
@@ -31,3 +31,5 @@ prometheus_blackbox_icmp_targets: ["{{ wireguard_ip | default(ansible_host) }}"]
 prometheus_node_targets: ["{{ wireguard_ip | default(ansible_host) + ':' + node_exporter_port | string }}"]
 prometheus_node_labels:
   instance: "{{ inventory_hostname }}"
+
+swarm_vip: "{{ all_net.vm.cidr | ansible.utils.ipaddr('200') }}"
