Set gitlab URLs in servers group_vars

--- a/inventory/group_vars/servers/vars.yml
+++ b/inventory/group_vars/servers/vars.yml
@@ -27,3 +27,6 @@ domain: "vm.{{ domains['hb'] }}"
 
 btrfs_scrub_email: "{{ smartd_email }}"
 btrfs_scrub_from_email: "{{ smartd_from_address }}"
+
+gitlab_external_url: "https://gitlab.{{ hostvars['gitlab01'].domain }}"
+gitlab_registry_external_url: "https://registry.{{ hostvars['gitlab01'].domain }}"
