--- a/playbooks/swarm.yml
+++ b/playbooks/swarm.yml
@@ -82,3 +82,31 @@
           when:
             - inventory_hostname != groups['swarm'][0]
             - "inventory_hostname not in __swarm_nodes.stdout"
+
+    - name: Configure registries
+      tags: ["registry"]
+      block:
+        - name: Check if config file exists
+          ansible.builtin.stat:
+            path: "/root/.docker/config.json"
+          register: __docker_config
+
+        - name: Read docker config
+          ansible.builtin.slurp:
+            path: "/root/.docker/config.json"
+          register: __docker_config_content
+          when: __docker_config.stat.exists
+
+        - name: Set docker config fact
+          ansible.builtin.set_fact:
+            __docker_config_json: "{{ __docker_config_content.content | b64decode | from_json }}"
+          when: __docker_config_content.content | default('')
+
+        - name: Login to registries
+          ansible.builtin.command:
+            cmd: "docker login --username {{ item.username }} --password-stdin {{ item.url }}"
+            stdin: "{{ item.password }}"
+          loop: "{{ docker_registries }}"
+          loop_control:
+            label: "{{ item.url }} [{{ item.username }}]"
+          when: not __docker_config.stat.exists or item.url not in __docker_config_json.auths
