--- a/inventory/host_vars/rompi/wireguard.yml
+++ b/inventory/host_vars/rompi/wireguard.yml
@@ -29,3 +29,4 @@ wireguard_unmanaged_peers:
     endpoint: "{{ hostvars['rb5009'].wireguard_endpoint }}"
     allowed_ips: "{{ wireguard_mt_allowed_ips | flatten | join(', ') }}"
     public_key: "{{ hostvars['rb5009'].wireguard_public_key }}"
+    preshared_key: "{{ lookup('community.general.passwordstore', 'network/' + inventory_hostname + '_wg_psk_mt') }}"
