Add util-linux-user package to thinkcentre and theia
Also add tmux to thinkcentre

--- a/inventory/group_vars/thinkcentre/fedora.yml
+++ b/inventory/group_vars/thinkcentre/fedora.yml
@@ -13,5 +13,7 @@ dnf_packages:
   - python3-lxml  # virt ansible modules
   - rpmconf
   - rsync
+  - tmux
+  - util-linux-user  # chsh
   - wget
   - yum-utils
