--- a/inventory/host_vars/theia/el.yml
+++ b/inventory/host_vars/theia/el.yml
@@ -22,6 +22,8 @@ dnf_packages:
   - ipmitool
   - jq
   - libtool
+  - libxml2-devel
+  - libxslt-devel
   - lm_sensors
   - lsof
   - make
@@ -41,6 +43,7 @@ dnf_packages:
   - python3-llfuse  # borg mount
   - python3-netaddr
   - python3-websockets
+  - rsync
   - rubygems
   - ShellCheck
   - smartmontools
@@ -50,9 +53,7 @@ dnf_packages:
   - telnet
   - tmux
   - usbutils
+  - util-linux-user  # chsh
   - vim
   - which
   - zsh
-  - rsync
-  - libxml2-devel
-  - libxslt-devel
