--- a/inventory/host_vars/theia/firewall.yml
+++ b/inventory/host_vars/theia/firewall.yml
@@ -1,6 +1,10 @@
 ---
 
-firewalld_zones:
+firewalld_zones: "{{ __cluster_firewalld_zones + __host_firewalld_zones }}"
+firewalld_services: "{{ __cluster_firewalld_services + __host_firewalld_services }}"
+firewall_rules: "{{ __cluster_firewall_rules + __host_firewall_rules }}"
+
+__host_firewalld_zones:
   - name: internal
     interfaces:
       - MGMT
@@ -12,7 +16,7 @@ firewalld_zones:
       - VM
       - NOINET
 
-firewalld_services:
+__host_firewalld_services:
   - name: cockpit
     zone: public
     state: absent
@@ -38,7 +42,7 @@ firewalld_services:
     zone: public
     sources: "{{ firewall_trusted_sources }}"
 
-firewall_rules:
+__host_firewall_rules:
   - port: 8384
     zone: public
     sources: "{{ proxy_hosts }}"
