Update default libvirt pool and images
Move from default to cephfs and qcow2 to raw.

--- a/inventory/host_vars/dresrv/libvirt.yml
+++ b/inventory/host_vars/dresrv/libvirt.yml
@@ -3,7 +3,7 @@
 vm_cpus: 8
 vm_mem: 16384
 
-vm_template: "rocky_packer.qcow2"
+vm_template: "rocky8_packer.raw"
 vm_os_id: "http://fedoraproject.org/fedora/35"
 
 vm_root_size: "500G"
