--- a/inventory/group_vars/libvirt/vars.yml
+++ b/inventory/group_vars/libvirt/vars.yml
@@ -3,13 +3,13 @@
 fstrim_timer_enabled: true
 libvirt_vm_engine: "kvm"
 
-vm_disk_format: "qcow2"
+vm_disk_format: "raw"
 vm_host: "theia"
 vm_cpus: 4
 vm_mem: 4096
 vm_template: "rocky9_packer.{{ vm_disk_format }}"
 vm_os_id: "http://rockylinux.org/rocky/9"
-vm_disk_pool: "default"
+vm_disk_pool: "cephfs"
 vm_extra_disks: []
 
 vm_data_disks: []
