--- a/inventory/group_vars/loki/libvirt.yml
+++ b/inventory/group_vars/loki/libvirt.yml
@@ -3,7 +3,7 @@
 vm_cpus: 4
 vm_mem: 4096
 
-vm_template: "rocky_packer.qcow2"
+vm_template: "rocky8_packer.raw"
 vm_os_id: "http://rockylinux.org/rocky/8"
 
 vm_root_size: "50G"
