--- a/inventory/group_vars/swarm/libvirt.yml
+++ b/inventory/group_vars/swarm/libvirt.yml
@@ -1,5 +1,5 @@
 ---
 
 # Sort to ensure it's consistent between runs
-__vm_host_list: "{{ groups['thinkcentre'] | sort }}"
+__vm_host_list: "{{ groups['thinkcentre'] | sort + ['theia'] }}"
 vm_host: "{{ __vm_host_list[groups['swarm'] | ansible.utils.index_of('eq', inventory_hostname) % (__vm_host_list | length)] }}"
